css/styles.css
html, body {
  margin: 0;
  height: auto;
}

body {
  display: grid;
  grid-template-columns: 1fr 2fr;
  grid-template-rows: 1fr 1fr;

}

.tick {
  stroke: black;
}

/* Page Title */
#page-title {
  position: absolute;
  width: 100%;
  margin: 0 auto;
  text-align: center;
  pointer-events: none;
}

/* Choropleth */
#choropleth {
  grid-column: 2 / 3;
  grid-row: 1 / 3;
  width: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#map {
  position: relative;
  width: auto;
  height: auto;
  margin-top: 20px;
}

#map-canvas-inset {
  position: absolute;
  top: 0;
  left: 0;
}

#map-title {
  text-align: center;
}

#year {
  display: inline-block;
}

#play-btn {
  fill: yellow;
  cursor: pointer;
}

#play-btn-text {
  color: black;
  pointer-events: none;
}

/* Climate line graph */
#climate-title {
  padding: 0 40px;
  margin: 10px 0;
}

#climate-line-graph {
  grid-column: 1 / 2;
  grid-row: 1 / 2;
  width: auto;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

/* Energy Bar Graph */
#energy-title {
  padding: 0 40px;
  margin: 10px 0;
}

#energy-bar-graph {
  grid-column: 1 / 2;
  grid-row: 2 / 3;
  width: auto;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

